clusters/lab/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  selector:
    app.kubernetes.io/name: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
